about 90% done with capstone

--- a/code/01) Downsizing_Data.ipynb
+++ b/code/01) Downsizing_Data.ipynb
@@ -5,12 +5,18 @@
    "id": "3684da51-f467-42d6-b032-d853c93abe84",
    "metadata": {},
    "source": [
-    "# 01) Downsizing the 212M Row Dataset"
+    "# 01) Downsizing\n",
+    "\n",
+    "The initial dataset contained 212,000,000 rows of data. In order to work with this locally, beginning NYC Open Data (the source of download) I queried the data, retrieving each month as month-a (the first half of a month) and month-b (the second half of the month). \n",
+    "\n",
+    "From there, I uploaded the data to Jupyter Lab and created an algorithm using pandas \"chunksize\" parameter to downsize each month-a and month-b for all 12 months.\n",
+    "\n",
+    "Once a single month's -a and -b were downsized, I concatenated each individually, saving the new dataframe as said month––all of which can be found in the data folder within \"2022_Chunked.zip\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "id": "982d6b4e-b01c-42e6-8490-6a579f25a090",
    "metadata": {},
    "outputs": [],
@@ -22,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "2e2169e9-d852-47fa-9c85-149c13073788",
    "metadata": {},
    "outputs": [
@@ -39,11 +45,11 @@
     "chunk_size = 10000\n",
     "\n",
     "#Opening the input file for reading\n",
-    "input_file = './data/2022_High_Volume_FHV_Trip_Records_20240404.csv'\n",
+    "input_file = '../data/2022_High_Volume_FHV_Trip_Records_20240413 (1).csv'\n",
     "reader = pd.read_csv(input_file, chunksize=chunk_size)\n",
     "\n",
     "#Opening the output file for writing\n",
-    "output_file = './data/dec_b_downsized.csv'\n",
+    "output_file = '../data/sept_b_downsized.csv'\n",
     "header_written = False\n",
     "\n",
     "#Iterating over each chunk\n",
@@ -59,16 +65,6 @@
     "\n",
     "\n",
     "print(\"I sampled your stuff. Is the life of a computer no more than that of a servent?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36aa2ff0-5449-4747-9647-c62b32525124",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!wc -l data/2022_High_Volume_FHV_Trip_Records_20240403.csv"
    ]
   },
   {
@@ -334,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "9b1ff29c-5c46-4cf7-8c2b-78d5c41f881f",
    "metadata": {},
    "outputs": [
@@ -342,16 +338,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(80000, 11) (80000, 11) (160000, 11)\n"
+      "(90000, 11) (30000, 11) (120000, 11)\n"
      ]
     }
    ],
    "source": [
-    "sept_a = pd.read_csv('./data/sept_a_downsized.csv')\n",
-    "sept_b = pd.read_csv('./data/sept_b_downsized.csv')\n",
+    "sept_a = pd.read_csv('../data/sept_a_downsized.csv')\n",
+    "sept_b = pd.read_csv('../data/sept_b_downsized.csv')\n",
     "sept = pd.concat([sept_a, sept_b])\n",
     "print(sept_a.shape, sept_b.shape, sept.shape)\n",
-    "sept.to_csv('./data/sept.csv')"
+    "sept.to_csv('../data/sept.csv')"
    ]
   },
   {
