fixing images, pushing for streamlit

--- a/code/02) Cleaning_Data.ipynb
+++ b/code/02) Cleaning_Data.ipynb
@@ -48,7 +48,7 @@
     "folder = '../data/'\n",
     "written = False\n",
     "\n",
-    "#def data_import(folder_path):   #uncomment to use\n",
+    "#def data_import(folder_path):  --->  uncomment this line to use\n",
     "    global written\n",
     "    files = os.listdir(folder_path)\n",
     "    output_file = '../data/taxi.csv'\n",
