--- a/code/02) Cleaning_Data.ipynb
+++ b/code/02) Cleaning_Data.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -605,47 +606,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "8b9693c2-8816-4528-8fbe-8af942b91339",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PULocationID                     int64\n",
-       "DOLocationID                     int64\n",
-       "trip_miles                     float64\n",
-       "base_passenger_fare            float64\n",
-       "tips                           float64\n",
-       "driver_pay                     float64\n",
-       "congestion_surcharge           float64\n",
-       "req_time                        object\n",
-       "req_date                datetime64[ns]\n",
-       "pickup_time             datetime64[ns]\n",
-       "dropoff_date            datetime64[ns]\n",
-       "dropoff_time            datetime64[ns]\n",
-       "temp                           float64\n",
-       "preciptype                       int64\n",
-       "zone                            object\n",
-       "borough_name                    object\n",
-       "borough                          int64\n",
-       "trip_duration                    int32\n",
-       "month                            int32\n",
-       "day                              int32\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 54,
    "id": "cec3b098-59e8-456d-bd41-14e9056be244",
    "metadata": {},
@@ -915,32 +875,6 @@
     "\n",
     "# Making a minute column\n",
     "df['minute'] = df['req_time'].apply(lambda x: x.minute)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "6eb594e6-af59-425f-a837-37c0fcb63122",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['PULocationID', 'DOLocationID', 'trip_miles', 'base_passenger_fare',\n",
-       "       'tips', 'driver_pay', 'congestion_surcharge', 'req_time', 'req_date',\n",
-       "       'pickup_time', 'dropoff_date', 'dropoff_time', 'temp', 'preciptype',\n",
-       "       'zone', 'borough_name', 'borough', 'trip_duration', 'month',\n",
-       "       'day_of_month', 'driver_made', 'day_of_week', 'hour', 'minute'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
    ]
   },
   {
