--- a/code/04) Modeling.ipynb
+++ b/code/04) Modeling.ipynb
@@ -279,40 +279,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "trip_miles              float64\n",
-       "tips                    float64\n",
-       "congestion_surcharge    float64\n",
-       "temp                    float64\n",
-       "preciptype                int64\n",
-       "zone                     object\n",
-       "borough_name             object\n",
-       "trip_duration           float64\n",
-       "month                     int64\n",
-       "day_of_month              int64\n",
-       "driver_made             float64\n",
-       "day_of_week              object\n",
-       "hour                      int64\n",
-       "minute                    int64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -328,6 +294,7 @@
     }
    ],
    "source": [
+    "#Sorting index by date\n",
     "new_df = new_df.sort_index()\n",
     "new_df.shape"
    ]
@@ -433,6 +400,7 @@
     }
    ],
    "source": [
+    "#Checkign it worked\n",
     "X_test.shape"
    ]
   },
@@ -469,29 +437,8 @@
     }
    ],
    "source": [
+    "#Getting the scores\n",
     "pipe.score(X_train, y_train), pipe.score(X_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 232,
-     "status": "ok",
-     "timestamp": 1712860151625,
-     "user": {
-      "displayName": "Dillon D",
-      "userId": "10525518487357266623"
-     },
-     "user_tz": 240
-    },
-    "id": "H_10llQ-YICy"
-   },
-   "outputs": [],
-   "source": [
-    "with open('../Taxis/taxi_model.pkl', 'wb') as f:\n",
-    "    pickle.dump(pipe, f)"
    ]
   },
   {
@@ -554,29 +501,6 @@
     "\n",
     "#Fitting\n",
     "pipe2.fit(X2_train, y2_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(525000, 12)\n",
-      "(175000, 12)\n",
-      "(525000,)\n",
-      "(175000,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(X2_train.shape)\n",
-    "print(X2_test.shape)\n",
-    "print(y2_train.shape)\n",
-    "print(y2_test.shape)"
    ]
   },
   {
@@ -679,16 +603,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Creating a smaller dataset to make it quicker\n",
-    "new_df = new_df.sample(n=1000000)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -786,16 +700,6 @@
     "#Imports I'll need\n",
     "from sklearn.linear_model import LinearRegression, Lasso, LassoCV, Ridge, RidgeCV\n",
     "from sklearn import metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Creating a smaller dataset\n",
-    "new_df = new_df.sample(n=500000, random_state=2024)"
    ]
   },
   {
@@ -1563,13 +1467,6 @@
     "#r2 scores\n",
     "print(pipe3.score(X_train, y_train), pipe3.score(X_test, y_test))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
